--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -32,6 +32,12 @@
     color: black
 }
 
+.navbar-link-active {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
 .active {
     color: black;
 }
