--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,65 +1,22 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 700px ;
-    margin: 0;
+.left {
+    flex: 30%;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0px 0px 10px 0px black;
+    border-radius: 10px;
 }
 
-.card {
+.right {
+    flex: 70%;
+    margin-left: 50px;
+}
+
+.container {
     display: flex;
-    width: 900px;
-    height: 550px;
-    background-color: #fff;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-top: 100px;
-  }
+    margin: 75px;
+}
 
-  .card-image{
-    margin: 80px 50px auto auto; 
-    text-align: center; 
-    align-items: center; 
-    width: 250px; 
-    height: 350px; 
-    box-shadow: 0px 0px 5px black; 
-    border-radius: 5px;
-  }
-
-
-  .card img{
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
-    border-radius: 5px 5px 0px 0px;
-  }
-
-  .text-side {
-    flex: 1;
-    padding: 20px;
-    margin: 30px 5px 30px 30px;
-  }
-
-  .image-side {
-    flex: 1;
-    overflow: hidden;
-    margin: 30px 30px 30px 5px;
-  }
-
-  .text-content {
-    margin-bottom: 20px;
-  }
-
-  .image {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-
-  .contact{
+.contact{
     display: flex; 
     align-items: center; 
     justify-content: center; 
@@ -69,10 +26,24 @@ body {
     border-radius: 15px;
   }
 
-  .contact.text{
+.contact.text{
     color: white; 
     text-align: center; 
     margin: 0;
   }
 
-  .cv
+@media only screen and (max-width: 576px) {
+    .container {
+        flex-direction: column;
+        margin: 20px;
+    }
+
+    .left {
+        margin: auto;
+    }
+
+    .right {
+        margin-top: 50px;
+        margin-left: 0px
+    }
+}
