--- a/assets/css/testimoni.css
+++ b/assets/css/testimoni.css
@@ -41,6 +41,25 @@
     width: 100%;
 }
 
+.container-rating {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-rating {
+    display: flex;
+}
+
+.rating-btn {
+    margin: 20px;
+    padding: 0px 20px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 900px) {
     .testimonial {
