--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,19 +1,24 @@
-.left {
+.image_side {
     flex: 30%;
-    padding: 20px;
     width: 300px;
+    height: 300px;
     box-shadow: 0px 0px 10px 0px black;
-    border-radius: 10px;
+    border-radius: 5px;
+    padding-bottom: 70px;
 }
 
-.right {
+.text_side {
     flex: 70%;
-    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .container {
     display: flex;
-    margin: 75px;
+    margin: 100px;
+    padding: 50px; /* Add padding to create space around the card */
+    box-shadow: 0px 0px 10px 0px black;
+    border-radius: 5px;
+    background-color: white;
 }
 
 .contact{
@@ -32,18 +37,19 @@
     margin: 0;
   }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 991px) {
     .container {
         flex-direction: column;
         margin: 20px;
     }
 
-    .left {
+    .image_side {
         margin: auto;
+        padding-bottom: auto;
+        height: 350px;
     }
 
-    .right {
-        margin-top: 50px;
-        margin-left: 0px
+    .text_side {
+       margin: auto;
     }
 }
