--- a/src/views/edit-project.hbs
+++ b/src/views/edit-project.hbs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-
 <html>
+
 <head>
-	<title>Add Project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/myproject.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <title>Edit My Project - {{id}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
@@ -24,10 +21,10 @@
 </style>
 
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="assets/image/dumbways.png" alt="Logo" class="navbar-logo" style="width:50px">
+            <img src="/assets/image/dumbways.png" alt="Logo" class="navbar-logo" style="width:50px">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,13 +51,14 @@
     </div>
 </nav>
 
-<div class="container mt-5">
-    <form action="/my-project" method="POST" class="w-50 mx-auto">
-        <h2 class="text-center mb-4">Add My Project</h2>
+<div class="container mt-5 w-50">
+    <form action="/edit-project/{{ id }}" method="POST">
+        <h2 class="text-center">Edit My Project</h2>
         <div class="mb-3">
             <label for="input-project-name" class="form-label">Project Name</label>
             <input id="input-project-name" name="title" class="form-control" required />
         </div>
+        
         <div class="mb-3 row">
             <div class="col-md-6">
                 <label for="input-start-date" class="form-label">Start Date</label>
@@ -71,6 +69,7 @@
                 <input type="date" class="form-control" id="input-end-date" name="end-date" required>
             </div>
         </div>
+
         <div class="mb-3">
             <label for="input-project-description" class="form-label">Description</label>
             <textarea id="input-project-description" name="content" class="form-control" required></textarea>
@@ -115,52 +114,11 @@
             <input class="form-control" type="file" id="input-image" accept="image/*" required>
         </div>
 
-        <!-- submit -->
+        <input type="hidden" name="id" value="{{ id }}">
         <div class="text-end">
             <button type="submit" class="btn btn-dark">Submit</button>
         </div>
     </form>
-</div>
-
-<div class="container-fluid mt-5">
-    <div id="contents" class="project-list">
-        <h1 class="project-title text-center">Project List</h1>
-        {{#each data}}
-        <div class="project-list-item position-relative mb-4">
-            <div class="project-image">
-                <img src="{{this.image}}" alt="" class="img-fluid">
-            </div>
-            <div class="project-content">
-                <h1>
-                    <a href="/project-page/{{@index}}" target="_blank">{{this.title}}</a>
-                </h1>
-                <div class="detail-project-content">
-                    {{ this.duration}} | {{this.date}} WIB | Reza Liswara
-                </div>
-                <div class="tech-icon-container">
-                    {{#each this.tech}}
-                      <i class="fa-brands {{this}}"></i>
-                    {{/each}}
-                </div>
-                <p>
-                    {{this.content}}
-                </p>
-                <div class="col-md-2 position-absolute top-0 end-0 me-0" style="height: fit-content; z-index: 1;">
-                    <a class="btn btn-dark" href="/edit-project/{{@index}}">Edit</a>
-                    <a class="btn btn-dark" href="/delete/{{@index}}">Delete</a>
-                </div>
-                <div>
-                    {{#if editTime}}
-                        <p>Uploaded {{ this.distanceTime }} <br> 
-                        Last Edited {{ this.editTime }} WIB </p>
-                    {{else}}
-                        <p>Uploaded {{ this.distanceTime }}</p>
-                    {{/if}}
-                </div>
-            </div>
-        </div>
-        {{/each}}
-    </div>
 </div>
 
 <script>
@@ -174,6 +132,6 @@
       nodeBox.checked = selectedTechs.includes("fa-node-js"); 
       pythonBox.checked = selectedTechs.includes("fa-python");
 </script>
-    
+
 </body>
 </html>
