--- a/src/views/edit-project.hbs
+++ b/src/views/edit-project.hbs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Edit My Project - {{id}}</title>
+    <title>Edit My Project - {{data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -52,27 +52,27 @@
 </nav>
 
 <div class="container mt-5 w-50">
-    <form action="/edit-project/{{ id }}" method="POST">
+    <form action="/edit-project/{{ data.id }}" method="POST">
         <h2 class="text-center">Edit My Project</h2>
         <div class="mb-3">
             <label for="input-project-name" class="form-label">Project Name</label>
-            <input id="input-project-name" name="title" class="form-control" required />
+            <input id="input-project-name" name="title" class="form-control" value="{{data.title}}" required />
         </div>
         
         <div class="mb-3 row">
             <div class="col-md-6">
                 <label for="input-start-date" class="form-label">Start Date</label>
-                <input type="date" class="form-control" id="input-start-date" name="start-date" required>
+                <input type="date" class="form-control" id="input-start-date" name="start-date" value="{{data.start_date}}" required>
             </div>
             <div class="col-md-6">
                 <label for="input-end-date" class="form-label">End Date</label>
-                <input type="date" class="form-control" id="input-end-date" name="end-date" required>
+                <input type="date" class="form-control" id="input-end-date" name="end-date" value="{{data.end_date}}" required>
             </div>
         </div>
 
         <div class="mb-3">
             <label for="input-project-description" class="form-label">Description</label>
-            <textarea id="input-project-description" name="content" class="form-control" required></textarea>
+            <textarea id="input-project-description" name="content" class="form-control" required>{{data.description}}</textarea>
         </div>
 
         <!-- checkbox -->
@@ -122,7 +122,7 @@
 </div>
 
 <script>
-      const selectedTechs = "{{data.tech}}"; 
+      const selectedTechs = "{{data.technologies}}"; 
       const cssBox = document.getElementById("css"); 
       const htmlBox = document.getElementById("html"); 
       const nodeBox = document.getElementById("nodejs"); 
