--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 
+
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
     <div class="container-fluid">
@@ -81,5 +82,64 @@
                 <p>Programmer Wannabe</p>
             </div>
     </section>
+
+    <section class="content-result-project bg-light pt-5 pb-5">
+    <div class="container-fluid mt-5">
+        <h2 class="text-center">My Project</h2>
+        <div class="text-end mt-3 mb-5">
+            </div>
+            <!-- baris -->
+            <div class="row" id="home">
+                {{#each data}}
+                <div class="col-lg-4 mt-4">
+                    <!-- card -->
+                    <div class="card border=0 shadow">
+                        <img 
+                            src="./assets/image/background.jpg"
+                            class="card-img-top"
+                            height="300" 
+                        />
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">
+                                <a href="/project-page/{{this.id}}" target="_blank"
+                                class="text-dark text-decoration-none" 
+                                >{{this.title}}</a>
+                            </h5>
+                            <small class="text-secondary fs-6">
+                                Durasi: {{ this.duration}} | {{this.createdAt}} <br> 
+                                Reza Liswara
+                            </small>
+                            <div class="d-flex mt-3">
+                                {{#each this.technologies}}
+                                        <div class="d-flex mt-4">
+                                            <i class="fa-brands {{this}} fa-2xl me-3"></i>
+                                        </div>
+                                {{/each}}
+                            </div>
+                            <p class="text-paraf mt-4">
+                                {{this.description}}
+                            </p>
+                             <small class="text-secondary fs-6">
+                                    <p> Last Edited {{ this.updatedAt }}</p>
+                            </small>
+                            <div class="btn-bottom d-flex justify-content-center mb-2">
+                                <a
+                                  href="/edit-project/{{this.id}}"
+                                  class="btn btn-dark me-1 p-0 w-50"
+                                >Edit</a>
+                                <a
+                                  href="/delete/{{this.id}}"
+                                  class="btn btn-dark p-0 w-50"
+                                >Delete</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card -->
+                </div>
+                {{/each}}
+            </div>
+        <!-- baris -->
+    </div>
+</section>
 </body>
 </html>
