--- a/src/views/my-project.hbs
+++ b/src/views/my-project.hbs
@@ -4,7 +4,6 @@
 <head>
 	<title>Add Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/myproject.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -44,12 +43,22 @@
                     <a class="nav-link" href="/testimoni">Testimonial</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="btn btn-dark d-none d-lg-inline" href="/contact">Contact Me</a>
-                    <a class="nav-link d-lg-none" href="/contact">Contact Me</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-lg-none" href="/contact">Contact Me</a>
+                    </li>
+                    <li class="nav-item d-none d-lg-inline">
+                        <a class="btn btn-dark" href="/contact">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
@@ -57,10 +66,13 @@
 <div class="container mt-5">
     <form action="/my-project" method="POST" class="w-50 mx-auto">
         <h2 class="text-center mb-4">Add My Project</h2>
+        <!-- project name -->
         <div class="mb-3">
             <label for="input-project-name" class="form-label">Project Name</label>
             <input id="input-project-name" name="title" class="form-control" required />
         </div>
+
+        <!-- start date and end date -->
         <div class="mb-3 row">
             <div class="col-md-6">
                 <label for="input-start-date" class="form-label">Start Date</label>
@@ -122,49 +134,8 @@
     </form>
 </div>
 
-<div class="container-fluid mt-5">
-    <div id="contents" class="project-list">
-        <h1 class="project-title text-center">Project List</h1>
-        {{#each data}}
-        <div class="project-list-item position-relative mb-4">
-            <div class="project-image">
-                <img src="{{this.image}}" alt="" class="img-fluid">
-            </div>
-            <div class="project-content">
-                <h1>
-                    <a href="/project-page/{{@index}}" target="_blank">{{this.title}}</a>
-                </h1>
-                <div class="detail-project-content">
-                    {{ this.duration}} | {{this.date}} WIB | Reza Liswara
-                </div>
-                <div class="tech-icon-container">
-                    {{#each this.tech}}
-                      <i class="fa-brands {{this}}"></i>
-                    {{/each}}
-                </div>
-                <p>
-                    {{this.content}}
-                </p>
-                <div class="col-md-2 position-absolute top-0 end-0 me-0" style="height: fit-content; z-index: 1;">
-                    <a class="btn btn-dark" href="/edit-project/{{@index}}">Edit</a>
-                    <a class="btn btn-dark" href="/delete/{{@index}}">Delete</a>
-                </div>
-                <div>
-                    {{#if editTime}}
-                        <p>Uploaded {{ this.distanceTime }} <br> 
-                        Last Edited {{ this.editTime }} WIB </p>
-                    {{else}}
-                        <p>Uploaded {{ this.distanceTime }}</p>
-                    {{/if}}
-                </div>
-            </div>
-        </div>
-        {{/each}}
-    </div>
-</div>
-
 <script>
-      const selectedTechs = "{{data.tech}}"; 
+      const selectedTechs = "{{data.technologies}}"; 
       const cssBox = document.getElementById("css"); 
       const htmlBox = document.getElementById("html"); 
       const nodeBox = document.getElementById("nodejs"); 
