Day 15 Autehtication using Session and Encription

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -12,7 +12,7 @@
     margin-right: 50px;
 }
 
-.container {
+.container1 {
     display: flex;
     margin: 100px;
     padding: 50px; /* Add padding to create space around the card */
