--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Testimonial</title>
-    <!-- <link rel="stylesheet" href="assets/css/nav.css" /> -->
-    <link rel="stylesheet" href="assets/css/testimoni.css" />
-    <link rel="stylesheet" href="assets/css/index.css" />
+<html>
+  <head>
+    <title>Personal Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</head>
+  </head>
 
-<body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+    body {
+    background-color: #dce0e4 !important;
+}
+</style>
+
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="assets/image/dumbways.png" alt="Logo" class="navbar-logo" style="width:50px">
@@ -31,26 +38,20 @@
                     <a class="nav-link" href="/my-project">Add Project</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active fw-bold" href="/testimoni">Testimonial</a>
+                    <a class="nav-link" href="/testimoni">Testimonial</a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                       {{#if isLogin}}
                     <li class="nav-item">
-                        <a class="nav-link fw-bold active">Hello, {{user}}</a>
+                        <a href="/register" class="nav-link">Register</a>
                     </li>
-                    <li class="nav-item ms-3">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                    {{else}}
                     <li class="nav-item">
-                        <a class="nav-link" href="/register">Register</a>
+                        <a href="/login" class="nav-link active fw-bold">Login</a>
                     </li>
-                    <li class="nav-item ms-3">
-                        <a class="nav-link" href="/login">Login</a>
+                    <li class="nav-item">
+                        <a class="nav-link d-lg-none" href="/contact">Contact Me</a>
                     </li>
-                    {{/if}}
                     <li class="nav-item d-none d-lg-inline">
                         <a class="btn btn-dark" href="/contact">Contact Me</a>
                     </li>
@@ -60,25 +61,29 @@
     </div>
 </nav>
 
-    <div class="container">
-    <h1 class="mt-4">Testimonials</h1>
-    <div class="container-rating mt-4">
-      <h2>Rating By Star</h2>
-      <div class="btn-group mt-4">
-        <button class="btn btn-dark" onclick="allTestimonial()">All</button>
-        <button class="btn btn-dark" onclick="filterTestimonial(1)">1 <i class="fas fa-star"></i></button>
-        <button class="btn btn-dark" onclick="filterTestimonial(2)">2 <i class="fas fa-star"></i></button>
-        <button class="btn btn-dark" onclick="filterTestimonial(3)">3 <i class="fas fa-star"></i></button>
-        <button class="btn btn-dark" onclick="filterTestimonial(4)">4 <i class="fas fa-star"></i></button>
-        <button class="btn btn-dark" onclick="filterTestimonial(5)">5 <i class="fas fa-star"></i></button>
+    {{#if messages.failed}}
+      <div class="alert alert-danger" role="alert">
+        <div class="container">
+          {{messages.failed}}
+        </div>
+      </div>
+    {{/if}}
+
+    <div class="container d-flex justify-content-center">
+      <div class="w-50">
+        <h3 class="text-center mt-5">LOGIN</h3>
+        <form method="post" action="/login">
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" id="password">
+          </div>
+          <button type="submit" class="btn btn-dark mt-3 px-5">Submit</button>
+        </form>
       </div>
     </div>
-    <section class="testimonials mt-4" id="testimonials">
-
-    </section>
-  </div>
-
-    <script src="assets/js/ajax testimonial.js"></script>
-</body>
-
+  </body>
 </html>
