--- a/src/views/project-page.hbs
+++ b/src/views/project-page.hbs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Project Page - {{title}}</title>
+	<title>Project Page - {{data.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,6 +17,12 @@
 
     body {
     background-color: #dce0e4 !important;
+
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
 }
 </style>
 
@@ -35,24 +41,40 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/my-project">Add Project</a>
+                    <a class="nav-link active fw-bold" href="/my-project">Add Project</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/testimoni">Testimonial</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="btn btn-dark d-none d-lg-inline" href="/contact">Contact Me</a>
-                    <a class="nav-link d-lg-none" href="/contact">Contact Me</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                       {{#if isLogin}}
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active text-dark">Hello, {{user}}</a>
+                    </li>
+                    <li class="nav-item ms-3">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    {{/if}}
+                    <li class="nav-item d-none d-lg-inline">
+                        <a class="btn btn-dark" href="/contact">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
 
 <div class="container mt-5">
-    <h1>{{data.title}}</h1>
+    <h1 class="text-center">{{data.title}}</h1>
 
     <section class="d-flex flex-wrap justify-content-around p-3">
         <div class="row">
