--- a/src/views/edit-project.hbs
+++ b/src/views/edit-project.hbs
@@ -47,7 +47,7 @@
                     <li class="nav-item">
                         <a class="nav-link fw-bold active">Hello, {{user}}</a>
                     </li>
-                    <li class="nav-item ms-3">
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
                     {{else}}
@@ -68,7 +68,7 @@
 </nav>
 
 <div class="container mt-5 w-50">
-    <form action="/edit-project/{{ data.id }}" method="POST">
+    <form action="/edit-project/{{ data.id }}" method="POST" enctype="multipart/form-data">
         <h2 class="text-center">Edit My Project</h2>
         <div class="mb-3">
             <label for="input-project-name" class="form-label">Project Name</label>
@@ -127,8 +127,9 @@
         <!-- image -->
         <div class="mb-3">
             <label for="input-image" class="form-label">Upload Image</label>
-            <input class="form-control" type="file" id="input-image" accept="image/*" required>
+            <input class="form-control" type="file" id="input-image" name='image' value="{{ data.image}}" required>
         </div>
+
 
         <input type="hidden" name="id" value="{{ id }}">
         <div class="text-end">
