--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -127,7 +127,7 @@
                     <!-- card -->
                     <div class="card border=0 shadow">
                         <img 
-                            src="./assets/image/background.jpg"
+                            src="/uploads/{{this.image}}"
                             class="card-img-top"
                             height="300" 
                         />
@@ -138,8 +138,8 @@
                                 >{{this.title}}</a>
                             </h5>
                             <small class="text-secondary fs-6">
-                                Durasi: {{ this.duration}} | {{this.createdAt}} <br> 
-                                Reza Liswara
+                                Durasi: {{ duration }} | {{this.createdAt}} <br> 
+                                {{ this.name }}
                             </small>
                             <div class="d-flex mt-3">
                                 {{#each this.technologies}}
@@ -152,7 +152,7 @@
                                 {{this.description}}
                             </p>
                              <small class="text-secondary fs-6">
-                                    <p> Last Edited {{ this.updatedAt }}</p>
+                                    <p> Last Edited {{ updatedAt }}</p>
                             </small>
                             
                             {{#if this.isLogin}}
