--- a/src/views/my-project.hbs
+++ b/src/views/my-project.hbs
@@ -71,7 +71,7 @@
 
 <div class="container mt-5">
     {{#if isLogin}}
-    <form action="/my-project" method="POST" class="w-50 mx-auto">
+    <form action="/my-project" method="POST" class="w-50 mx-auto" enctype="multipart/form-data">
         <h2 class="text-center mb-4">Add My Project</h2>
         <!-- project name -->
         <div class="mb-3">
@@ -131,7 +131,7 @@
         <!-- image -->
         <div class="mb-3">
             <label for="input-image" class="form-label">Upload Image</label>
-            <input class="form-control" type="file" id="input-image" accept="image/*" required>
+            <input class="form-control" type="file" id="input-image" name='image' required>
         </div>
 
         <!-- submit -->
