--- a/src/views/project-page.hbs
+++ b/src/views/project-page.hbs
@@ -79,7 +79,7 @@
     <section class="d-flex flex-wrap justify-content-around p-3">
         <div class="row">
             <div class="col-md-6 mb-3">
-                <img src="/assets/image/background.jpg" alt="Description of the image" class="img-fluid">
+                <img src="/uploads/{{data.image}}" alt="Description of the image" class="img-fluid">
             </div>
 
             <div class="col-md-6 mb-3">
@@ -99,7 +99,7 @@
                 
                 <div class="icon-tech d-flex mt-3">
                     {{#each data.technologies}}
-                        <i class="fa-brands {{this}} fa-2xl"></i>
+                        <i class="fa-brands {{this}} fa-2xl me-3"></i>
                     {{/each}}
                 </div>
             </div>
