Enhance home view and fixing some issue on handleEditProject in index.js

--- a/src/views/edit-project.hbs
+++ b/src/views/edit-project.hbs
@@ -50,6 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
+                    <li class="nav-item d-none d-lg-inline">
+                        <a class="btn btn-dark" href="/contact">Contact Me</a>
+                    </li>
                     {{else}}
                     <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
@@ -57,10 +60,10 @@
                     <li class="nav-item ms-3">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
-                    {{/if}}
                     <li class="nav-item d-none d-lg-inline">
                         <a class="btn btn-dark" href="/contact">Contact Me</a>
                     </li>
+                    {{/if}}
                 </ul>
             </div>
         </div>
